<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
    >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:fillViewport="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/infoCatInTheHat"
                android:id="@+id/textView"
                android:background="#ca34332f"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="22sp"
                android:minHeight="25dp"
                />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/theCat"
                    android:id="@+id/theCat"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textSize="26sp"
                    />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                >

                <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:text="@string/thing1"
                    android:id="@+id/thing1"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textSize="26sp"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:text="@string/thing2"
                    android:id="@+id/thing2"
                    android:backgroundTintMode="add"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textSize="26sp"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thingamajigger"
                    android:id="@+id/thingamajigger"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textSize="26sp"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sally"
                    android:id="@+id/sally"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textSize="26sp"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nick"
                    android:id="@+id/nick"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textSize="26sp"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drSeuss"
                    android:id="@+id/drSeuss"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textSize="28sp"
                    />
            </TableRow>

        </TableLayout>
    </ScrollView>

</RelativeLayout>
